--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
             <a class="nav-link" href="/watchlists">Watchlist <span class="sr-only">(current)</span></a>
           </li>
             <li class="nav-item active">
-              <a class="nav-link" href="/pets">Applications <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/applications">Applications <span class="sr-only">(current)</span></a>
             </li>
         </ul>
         <ul class="navbar-nav my-2 my-lg-0">
